tests/lean/empty.lean.expected.out
empty.lean:5:25: error: empty.lean:5:25: failed to synthesize placeholder
 ⊢ inhabited Empty
